force-app/main/default/objects/Implementation_Status_Update__c/Implementation_Status_Update__c.object-meta.xml
<CustomObject>
    <description>Object used to store information about the implementation status updates.</description>
    <label>Implementation &amp; Manage Services Summary</label>
    <nameField>
        <displayFormat>ISU-{0000}</displayFormat>
        <label>ISU #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementation &amp; Manage Services Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>