force-app/main/default/objects/Implementation_Status_Update__c/fields/Customer_Service_Rep__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Rep__c</fullName>
    <formula>Account__r.CSR__r.FirstName + &apos; &apos; + Account__r.CSR__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Service Rep</label>
    <type>Text</type>
</CustomField>