force-app/main/default/objects/Implementation_Status_Update__c/fields/Deal_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Deal_Expiration__c</fullName>
    <formula>Account__r.Deal_Expiration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Expiration</label>
    <type>Date</type>
</CustomField>