force-app/main/default/objects/Implementation_Status_Update__c/fields/Implementation_Status_text__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Status_text__c</fullName>
    <label>Original Implementation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>