force-app/main/default/objects/Implementation_Status_Update__c/fields/Inside_CSR__c.field-meta.xml
<CustomField>
    <fullName>Inside_CSR__c</fullName>
    <formula>Account__r.Inside_CSR__r.FirstName + &apos; &apos; + Account__r.Inside_CSR__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inside CSR</label>
    <type>Text</type>
</CustomField>