force-app/main/default/objects/Implementation_Status_Update__c/fields/Issues_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Issues_Concerns__c</fullName>
    <label>Issues / Concerns</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>