force-app/main/default/objects/Implementation_Status_Update__c/fields/Meeting_Summary__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Summary__c</fullName>
    <label>Implementation Summary</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>