force-app/main/default/objects/Implementation_Status_Update__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <inlineHelpText>Identify the method of customer contact to review final implementation.</inlineHelpText>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>