force-app/main/default/objects/Implementation_Status_Update__c/fields/Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used to verify the most recent record - updated by trigger &quot;ImplementationStatusAll&quot;</description>
    <label>Most Recent</label>
    <type>Checkbox</type>
</CustomField>