force-app/main/default/objects/Implementation_Status_Update__c/fields/Next_Objective_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Next_Objective_Strategy__c</fullName>
    <inlineHelpText>Review the critical next steps including training, on going support and future hardware purchases.</inlineHelpText>
    <label>Critical Next Steps</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>