force-app/main/default/objects/Implementation_Status_Update__c/fields/Operations_IT_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Operations_IT_Maintenance__c</fullName>
    <inlineHelpText>Please enter specific items and details included in implementation project.</inlineHelpText>
    <label>Implementation Details</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>