force-app/main/default/objects/Implementation_Status_Update__c/fields/QES_Attendees__c.field-meta.xml
<CustomField>
    <fullName>QES_Attendees__c</fullName>
    <label>Omnitracs Attendees</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>