force-app/main/default/objects/Implementation_Status_Update__c/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <formula>Account__r.Sales_Director__r.FirstName + &apos; &apos; + Account__r.Sales_Director__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Director</label>
    <type>Text</type>
</CustomField>